fixed rating alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -485,3 +485,25 @@ button.viewTeamBtn:hover {
 button.viewTeamBtn:active {
   box-shadow: inset 0 2px 5px #2370fe;
 }
+
+
+.noTeamH1 {
+  text-align: center;
+  font-size: 40px;
+}
+.userForm {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.message {
+  width: 350px;
+  min-height: 60px;
+  margin-top: 10px;
+  word-wrap: break-word;
+  word-break: break-all;
+  background-color: white;
+}
