--- a/client/src/Team.css
+++ b/client/src/Team.css
@@ -1,4 +1,3 @@
-
 .soccerField {
   /* background-image: url("http://i.imgur.com/IzIbcen.jpg"); */
   background-image: url("https://images.mlssoccer.com/image/private/t_q-best/prd-league/piqx8hn8s29ysdnxxydx.jpg");
@@ -9,76 +8,53 @@
 }
 
 .fieldPlayers {
-    height: 200px;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    display: flex;
-    margin-left: auto;
+  height: 200px;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  display: flex;
+  margin-left: auto;
 }
 
 .smallPlayerImg {
-    width: 50%;
+  width: 50%;
 }
-.cardBorder{
-    margin-left: 20px;
-    margin-right: 20px;
-
+.cardBorder {
+  margin-left: 20px;
+  margin-right: 20px;
 }
-.cardBorder .smallDivPlayer{
-    align-items: center;
-    text-align: center;
-    width: 200px;
-    background-color:rgb(255, 255, 255);
-    border-radius: 15px;
-    border-style: solid;
-    border-width: 1px;
-    height: 189px;
-
-
+.cardBorder .smallDivPlayer {
+  align-items: center;
+  text-align: center;
+  width: 200px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 15px;
+  border-style: solid;
+  border-width: 1px;
+  height: 189px;
 }
 .benchPlayers {
-    height: 200px;
-    margin: auto;
-    white-space: nowrap;
-    bottom: 0;
-    overflow-x: scroll;
-    
-    overflow-y: hidden;
+  height: 200px;
+  margin: auto;
+  white-space: nowrap;
+  bottom: 0;
+  overflow-x: scroll;
+
+  overflow-y: hidden;
 }
 
-.smallBenchPlayer{
-    align-items: center;
-    text-align: center;
-    position: relative;
-    width: 150px;
-    background-color: white;
-    border-radius: 10px;
-    border-style: solid;
-    border-width: 1px;
-    margin-left: 10px;
-    margin-right: 10px;
-    display: inline-block;
-    bottom: 10px
-    
+.smallBenchPlayer {
+  align-items: center;
+  text-align: center;
+  position: relative;
+  width: 150px;
+  background-color: white;
+  border-radius: 10px;
+  border-style: solid;
+  border-width: 1px;
+  margin-left: 10px;
+  margin-right: 10px;
+  display: inline-block;
+  bottom: 10px;
 }
 
-.noTeamH1 {
-    text-align: center;
-    font-size: 40px;
-}   
-.userForm{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    flex-direction: column;
-}
-
-.message {width: 350px;
-min-height: 60px;
-margin-top: 50px;
-word-wrap: break-word;
-word-break: break-all;
-background-color: white;
-}
